<resources>

    <string name="title_activity_admin_create_new_course">AdminCreateNewCourse</string>



    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="sign_up_fragment_label">Sign Up Fragment</string>

    <string name="sign_up_title">Sign up Page</string>

    <string name="back_button">Back</string>
    <string name="admin_switch">Admin?</string>
    <string name="login_title">Login Page</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign up</string>
    <string name="sign_up_now_button">Sign up now!</string>
    <string name="sign_up_message">Sign up today and use the app!</string>

    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="confirm">Confirm password:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>




    <!-- Strings used for fragments for navigation -->
    <string name="future_course">Future Course</string>
    <string name="add_course">Add Course</string>
    <string name="go_back">Go Back</string>
    <string name="delete_course">Delete Course</string>
    <string name="future_course_list">Future Course List</string>
    <string name="generate_timeline">Generate Timeline</string>
    <string name="view_past_course">View Past Course</string>
    <string name="view_desired_course">View Desired Course</string>
    <string name="past_course_list">Past Course List</string>
    <string name="past_course">Past Course</string>
    <string name="enter_coursecode">Enter CourseCode</string>
    <string name="generate_your_timeline">Generate Your Timeline</string>
    <string name="view_timeline">View Timeline</string>
    <string name="generate">Generate</string>
    <string name="sessions">Sessions</string>
    <string name="i_want_to_start_my_future_courses_from">I want to start my future courses from:</string>
    <string name="year">Year</string>
</resources>